change the service

--- a/boss-infos/env/prod/application.properties
+++ b/boss-infos/env/prod/application.properties
@@ -1,8 +1,6 @@
 #prod
 #news
-news.api.user = sh_bmw
-news.api.key = 523a8fdda97e45e6
-news.api.gateway = http://cmspro.navinfo.com/NI/cms/api/news/
+news.api.gateway = https://op.inews.qq.com/mcms/h5/info/bmw_list?
 
 #weather
 weather.api.user = sh_bmw
