--- a/boss-infos/src/main/resources/application.properties
+++ b/boss-infos/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 #news
-news.api.user = sh_bmw
-news.api.key = 523a8fdda97e45e6
-news.api.gateway = http://cmsint.navinfo.com/NI/cms/api/news/
+news.api.gateway = https://op.inews.qq.com/mcms/h5/info/bmw_list?
 
 #weather
 weather.api.user = sh_bmw
