--- a/boss-infos/src/main/webapp/WEB-INF/web.xml
+++ b/boss-infos/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,17 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <!-- Cookie设置HttpOnly，Secure，Expire属性 -->
+  <filter>
+    <filter-name>cookieFilter</filter-name>
+    <filter-class>com.bmw.boss.common.filter.CookieFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>cookieFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <!-- 防止spring内存溢出监听器 -->
   <listener>
     <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
@@ -71,6 +82,14 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
+  <!-- Cookie设置secure属性,提示浏览器只能通过Https(加密方式)方式来传输cookie，
+  Http(未加密方式)方式则不可以 -->
+  <session-config>
+    <cookie-config>
+      <http-only>true</http-only>
+      <secure>true</secure>
+    </cookie-config>
+  </session-config>
 
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
