--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <spring-data-mongodb.version>1.7.2.RELEASE</spring-data-mongodb.version>
         <mongo-java-driver.version>3.5.0</mongo-java-driver.version>
         <httpclient.version>4.5.6</httpclient.version>
+        <fluent.version>4.5.2</fluent.version>
         <lombok.version>1.16.18</lombok.version>
     </properties>
 
@@ -295,6 +296,11 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>${fluent.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
