--- a/boss-infos/src/main/resources/properties/redis.properties
+++ b/boss-infos/src/main/resources/properties/redis.properties
@@ -7,7 +7,7 @@ redis.timeout=10000
 redis.dbIndex=1
 redis.dbIndex2=2
 redis.CachingTime=900
-redis.url=redis://redis_6379@111.231.203.94:6379/2
+#redis.url=redis://redis_6379@111.231.203.94:6379/2
 
 #\u6700\u5927\u7A7A\u95F2\u6570
 redis.maxIdle=300
